Remove saving the palette with the workspace

BUG:446634
(cherry picked from commit b6e859ccb7bd597394ec029711a318ea321ccc9d)